# ATCA

./: .gitignore
SkinningProject/: CMakeLists.txt
SkinningProject/include/: Bone.h  HeatSkinning.h  Mesh.h  Shader.h  Skeleton.h
SkinningProject/src/: HeatSkinning.cpp  Mesh.cpp  Shader.cpp  Skeleton.cpp  main.cpp
rigging/: HW.blend1  skeleton.mtl
